ct-transpiler/testsuite/good/ImportCategoryToPieceDecl/R.hs
{-# LANGUAGE ComposableTypes #-}

module R where

import A

piececategory R
