ct-transpiler/testsuite/bad/HidingExpr/Init.hs
{-# LANGUAGE ComposableTypes #-}

module Init where

piececategory Expr
